<resources>
    <string name="app_name">OtterLibrary</string>
    <string name="create">Create Account</string>
    <string name="placeholder">Place Hold</string>
    <string name="manage">Manage System</string>
    <string name="Create_account_title">Create Account</string>
    <string name="username_text">Username</string>
    <string name="username_hint">Enter a Username</string>
    <string name="password_hint">Enter a password</string>
    <string name="create_button">Create</string>
    <string name="manage_system_title">Manage System</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Login_button">Login</string>
    <string name="Login_title">Login</string>
    <string name="password_text">Password</string>
    <string name="placeholder_title">Place Hold</string>
    <string name="adminUser_text">Admin Username</string>
    <string name="adminPassword_text">Admin Password</string>
</resources>